--- a/style.css
+++ b/style.css
@@ -28,26 +28,21 @@ h4 {
 hr.solid {
     border-top: 2px solid #915744;
     border-radius: 5px;
-    width: 57%; 
+    width: 57%;
     margin: 0 auto;
     /* max-width: 1300px; */
 }
 
 
-.intro {
-    height: 100%;
-}
 
 .intro-container {
     display: flex;
     justify-content: flex-start;
     align-items: center;
     gap: 50px;
-    height: 100%;
-    width: 100%;
-    max-width: 1300px;
-    margin: 50px 0;
-    padding: 0px 300px 0 400PX;
+    margin: 50px auto;
+    width: auto;
+    max-width: 1100px;
 }
 
 .column-right {
@@ -81,8 +76,9 @@ hr.solid {
 
 
 .about-container {
-    margin: 50px 0;
-    padding: 0 400px;
+    margin: 50px auto;
+    width: auto;
+    max-width: 1100px;
 }
 
 .about-container h2 {
@@ -92,12 +88,12 @@ hr.solid {
 
 
 .experience-container {
-    margin: 50px 0;
-    padding: 0 400px;
+    margin: 50px auto;
+    width: auto;
+    max-width: 1100px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: flex-start;
     align-content: space-between;
     gap: 15px;
 }
@@ -117,8 +113,9 @@ ul.experience-list {
 
 
 .education-container {
-    margin: 50px 0;
-    padding: 0 400px;
+    margin: 50px auto;
+    width: auto;
+    max-width: 1100px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -139,8 +136,9 @@ ul.experience-list {
 
 
 .skills-container {
-    margin: 50px 0;
-    padding: 0 400px;
+    margin: 50px auto;
+    width: auto;
+    max-width: 1100px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
