--- a/style.css
+++ b/style.css
@@ -28,9 +28,9 @@ h4 {
 hr.solid {
     border-top: 2px solid #915744;
     border-radius: 5px;
-    width: 57%;
+    width: 80%;
     margin: 0 auto;
-    /* max-width: 1300px; */
+    max-width: 1150px;
 }
 
 
